...
    private let activityView = UIActivityIndicatorView()

    private let loginButton = ExtendedButton(title: "Log in",
                                       backgroundColor: Colors.whiteColor,
                                       titleColor: .black,
                                       isShadow: true)
    private let registrationButton = ExtendedButton(title: "Sign up",
                                              backgroundColor: Colors.mainBlueColor,
                                              titleColor: Colors.whiteColor,
                                              isShadow: false)

    private let loginStandardTextField = GBShopStandardTextField(labelText: "Login")
    private let passwordStandardTextField = GBShopStandardTextField(labelText: "Password",
...
